@@ -3,6 +3,7 @@
 	* FCall.m ([FCall -createEnd]): Pass correct number of arguments.
 	([FCall -_performAction_:]): Pass correct offset of argument 
 	values array.
+	(init_javacall_tables): Get the jniEnv as an argument.
 
 1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
 
